kube/http.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-http
  labels:
    app: wedding-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wedding-http
  template:
    metadata:
      labels:
        app: wedding-http
    spec:
      containers:
      - name: wedding-http
        image: gcr.io/deepthought-collective/wedding-http:1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: "/secret"
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: wedding
