kube/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-app
  labels:
    app: wedding-app
spec:
  type: NodePort
  selector:
    app: wedding-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
