kube/http.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-http
  labels:
    app: wedding-http
spec:
  type: NodePort
  selector:
    app: wedding-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
